# lab-xx-template

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: CI.yml
include/: example.hpp
sources/: example.cpp  main.cpp
sources/example/: example.hpp
tests/: example.cpp  test_main.cpp
